# AEGIS_OS

./: .gitignore  .pre-commit-config.yaml  README.md  instruction.md  package.json  pyproject.toml
.aegis/: state.json
aegis/: ai_diagnostics.py  ai_execution.py  api.py  audit.py  chat_cli.py  cli.py  conversation_manager.py  daemon.py  desktop_integration.py  evolution.py  firstboot.py  firstboot_wizard.py  guardian.py  hardware.py  logging.py  memory.py  permission_prompt.py  personalization.py  planner.py  resource_scheduler.py  result.py  security.py  skill.py  state.py  storage.py  telemetry.py  trust_ledger.py  update_manager.py
deploy/: model_catalog.json
scripts/: assert_integrated_service_enable_start.sh  build_iso_debian_live.sh  clone_distro_base.sh  debian_installer_late_command.sh  install_distro_rootfs.sh  install_windows.ps1  install_windows_service.ps1  installer_select_model.sh  no_placeholder_guard.sh  release_rollback.sh  release_snapshot.sh  run_chaos_smoke.sh  run_orchestrator_eval_harness.sh  run_soak_test.sh  runtime_policy_defaults.sh  uninstall_windows_service.ps1  validate_iso_evidence.sh
tests/: test_action_schema.py  test_ai_diagnostics.py  test_ai_execution.py  test_api.py  test_api_metrics.py  test_api_websocket.py  test_audit.py  test_batch_file_skill.py  test_chat_cli.py  test_cli.py  test_container_runner_hardening.py  test_container_security.py  test_control_panel_smoke.py  test_conversation_manager.py  test_daemon.py  test_daemon_planner_integration.py  test_desktop_integration.py  test_end_to_end.py  test_evolution.py  (+35 more)
(+61 files in other folders)
